--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
                 <a href="#booking" class="btn">Book a Service Today</a>
             </div>
             <div class="hero-image">
-                <img src="https://images.unsplash.com/photo-1582735689256-79f0c14ecea0?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" alt="Laundry Service">
+                <img src="https://uploads.onecompiler.io/43yn8ycmd/43yn8yyrr/240507-how-to-clean-clothes-vl-main-17f799.jpg" alt="Laundry Service">
             </div>
         </div>
     </section>
